<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.test.LoginActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:keepScreenOn="true"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/register_content"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/label_welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="15"
                android:gravity="center"
                android:keepScreenOn="true"
                android:text="@string/text_register"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/onRefresh"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/img_view_pass"
                android:onClick="onRefresh"
                android:src="@android:drawable/ic_menu_rotate" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvNubm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:keepScreenOn="false"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/captcha_content"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal" >

            <WebView
                android:id="@+id/webView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1" >
            </WebView>
        </LinearLayout>

        <TextView
            android:id="@+id/tvWaitReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:keepScreenOn="false"
            android:text="@string/label_reg_wait"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="14sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/edNumbCap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_shape_edt"
            android:hint="@string/captcha_pattern"
            android:inputType="phone"
            android:keepScreenOn="true"
            android:maxLength="6"
            android:padding="10dp"
            android:textSize="18sp" >
        </EditText>

        <TextView
            android:id="@+id/tvErrorReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:keepScreenOn="false"
            android:text="@string/label_net_error"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="16sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_shape_btn"
            android:onClick="click"
            android:padding="10dp"
            android:text="@string/text_btn_reg"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvLastReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:keepScreenOn="false"
            android:text="@string/label_last_login"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="16sp"
            android:visibility="gone" />
    </LinearLayout>

</ScrollView>